@@ -1,4 +1,8 @@
-Wed Jul 27 12:52:04 1994  Mark Eichin  (eichin@tweedledumber.cygnus.com)
+Fri Aug  5 15:35:54 1994  Mark Eichin  (eichin@cygnus.com)
+
+	* configure.in, logutil.c: check for NO_UT_PID, use it.
+
+Wed Jul 27 12:52:04 1994  Mark Eichin  (eichin@cygnus.com)
 
 	* krlogind.c, krlogin.c, krcp.c: define roundup if needed.
 
